--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,15 @@ body {
 nav {
   background-color: #010101;
   box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.1);
+  z-index: 100;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  padding: 20px 0 10px 0;
 }
 
 nav ul {
@@ -92,7 +101,8 @@ nav li:first-child {
   }
 }
 
-/*slider*/
+/*===== slider =======*/
+
 .slider {
   height: 100vh;
   margin-top: -10px;
